feat: add pagination to restaurants.list
