# app/openapi.yaml
@@ -40,17 +40,34 @@ paths:
         - Restaurants
       parameters:
         - $ref: "#/components/parameters/Locale"
-        - $ref: "#/components/parameters/Sort"
+        - name: sort
+          in: query
+          description: The field to sort by
+          required: false
+          schema:
+            type: string
+            enum: [name, price, rating, num_items]
         - $ref: "#/components/parameters/Order"
+        - $ref: "#/components/parameters/Page"
+        - $ref: "#/components/parameters/PageSize"
       responses:
         "200":
           description: List of restaurants
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/Restaurant"
+                type: object
+                properties:
+                  total:
+                    type: integer
+                  page:
+                    type: integer
+                  page_size:
+                    type: integer
+                  data:
+                    type: array
+                    items:
+                      $ref: "#/components/schemas/Restaurant"
       security: []
     post:
       summary: Create a restaurant
@@ -413,16 +430,10 @@ components:
       required: false
       schema:
         type: string
-        example: en
+        enum: [en, zh-CN, zh-TW]
         default: en
-    Sort:
-      name: sort
-      in: query
-      description: The field to sort by
-      required: false
-      schema:
-        type: string
-        enum: [price, rating, num_items]
+
+    ########## Sorting ##########
     Order:
       name: order
       in: query
@@ -431,6 +442,28 @@ components:
       schema:
         type: string
         enum: [asc, desc]
+        default: asc
+
+    ########## Paginations ##########
+    Page:
+      name: page
+      in: query
+      description: The page number
+      required: false
+      schema:
+        type: integer
+        minimum: 1
+        default: 1
+    PageSize:
+      name: page_size
+      in: query
+      description: The number of items per page
+      required: false
+      schema:
+        type: integer
+        minimum: 1
+        maximum: 100
+        default: 10
 
     ########## IDs ##########
     RestaurantId:
