# app/routes/restaurants_routes.py
@@ -5,8 +5,6 @@ from app.models.restaurant import Restaurant
 from app.routes.errors import NotFoundError
 from app.routes.utils import (
     validate_form,
-    validate_locale,
-    validate_order,
     validate_param,
 )
 from app.schemas.restaurants import RestaurantForm
@@ -20,27 +18,31 @@ def preload_restaurant_from_id(restaurant_id: str, *args, **kwargs):
     return restaurant
 
 
-def validate_sort(sort: str = None, *args, **kwargs):
-    if sort and sort not in ["price", "rating", "num_items"]:
-        raise ValueError(f"Invalid sort: {sort}")
-
-
-@validate_param("locale", validate_locale)
-@validate_param("sort", validate_sort)
-@validate_param("order", validate_order)
 def list_restaurants(
-    locale: str = None, sort: str = None, order: str = None, *args, **kwargs
+    locale: str = "en",
+    sort: str = "created_at",
+    order: str = "asc",
+    page: int = 1,
+    page_size: int = 10,
+    *args,
+    **kwargs,
 ):
-    restaurants = Restaurant.list(sort=sort, order=order)
+    restaurants = Restaurant.list(
+        sort=sort, order=order, page=page, page_size=page_size
+    )
     restaurants = [restaurant.to_dict(locale=locale) for restaurant in restaurants]
 
     return (
-        restaurants,
+        {
+            "total": Restaurant.count(),
+            "page": page,
+            "page_size": page_size,
+            "data": restaurants,
+        },
         HTTPStatus.OK,
     )
 
 
-@validate_param("locale", validate_locale)
 @validate_param("restaurant", side_effect=preload_restaurant_from_id)
 def get_restaurant(restaurant: Restaurant, locale: str = None, *args, **kwargs):
     return (
